--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Simulacion de Probabilidad</title>
+		<title>Probability simulation</title>
 		<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,7 +22,7 @@
 		<div id="app">
 			<header class="hero is-link">
 				<div class="has-text-centered hero-body">
-					<h1 class="title is-1">Probabilidades</h1>
+					<h1 class="title is-1">Probabilities</h1>
 					<h2 class="subtitle">And aleatory <strong>experiments</strong></h2>
 				</div>
 				<div class="hero-footer">
